--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,13 @@
 [package]
 name = "btfdump"
+description = "Tool to dump and work with BTF."
 version = "0.0.1"
 authors = ["Andrii Nakryiko <andriin@fb.com>"]
+license = "BSD-2-Clause"
 edition = "2018"
-publish = false
+readme = "README.md"
+repository = "https://github.com/anakryiko/btfdump"
+keywords = ["btf", "bpf"]
 
 [lib]
 name = "btf"
