Cargo.toml: use andrii@kernel.org email
Use andrii@kernel.org email, which is more "stable".

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "btfdump"
 description = "BTF introspection tool"
 version = "0.0.1"
-authors = ["Andrii Nakryiko <andriin@fb.com>"]
+authors = ["Andrii Nakryiko <andrii@kernel.org>"]
 license = "BSD-2-Clause"
 edition = "2018"
 readme = "README.md"
