--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ name = "btf"
 path = "src/main.rs"
 
 [dependencies]
-structopt = "0.3"
+clap = { version = "3.0", features = ["derive"] }
 goblin = "0.6.1"
 object = "0.31.1"
 memmap = "0.7.0"
@@ -27,7 +27,3 @@ scroll_derive = "0.11.0"
 regex = "1"
 lazy_static = "1"
 bitflags = "2"
-
-[dependencies.clap]
-version = "4.3"
-features = ["wrap_help"]
